# FitBaseAutoTests

./: LICENCE  conftest.py  pyproject.toml  requirements.txt
pages/: auth_page.py  base_page.py  locators.py  main_page.py
tests/: test_auth_page.py  test_base_page.py  test_main_page.py
utils/: get_monitor_size.py
