[tool.poetry]
name = "fitbase-auto-tests"
version = "0.1.0"
description = ""
authors = ["CinnamonPie <vonahkahs.s.ved@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
selenium = "^4.28.1"
python-dotenv = "^1.0.1"
screeninfo = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
